# tinkoff_fintech

homework1/: README.md  battlefield.py  main.py  window.py
homework2/: README.md  pyproject.toml
homework2/tests/: test_cache_weather.py  test_main_weather.py  test_parse_html.py
homework2/weather/: __main__.py  cache_weather.py  main_weather.py  parse_html.py
homework3/: Makefile  README.md  pyproject.toml  setup.cfg
homework3/app/: __init__.py  database_class.py  todo.py  todo_class.py
homework3/app/templates/: todo.html
homework3/tests/: test_app.py  test_database.py  test_todo_class.py
homework4/: Makefile  README.md  data.db  pyproject.toml  setup.cfg
homework4/app/: __main__.py  application.py  databases.py  functions.py  paginate.py  update_crypto_costs.py
homework4/app/templates/: base.html  buy.html  history.html  home.html  portfolio.html
homework4/tests/: test_application.py  test_databases.py  test_functions.py  test_paginate.py
homework5/: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
homework5/app/: app.py  database.py  functions.py  keys.py  models.py  paginate.py
homework5/tests/: test_app.py  test_functions.py  test_keys.py  test_models.py  test_paginate.py
homework6/: Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
homework6/app/: convert.py  endpoints.py  functions.py  redis.py
homework6/tests/: conftest.py  test_endpoints.py  test_functions.py  test_redis.py
homework7/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
homework7/app/: endpoints.py  html.py  redis.py
homework7/tests/: conftest.py  test_endpoints.py  test_redis.py
homework8/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init_db.py  pyproject.toml  setup.cfg
homework8/app/: app.py  auth.py  config.py  db_check.py  exceptions.py  paginate.py  schemas.py
homework8/app/db/: base.py  get_db.py  init_db.py  models.py  session.py
homework8/app/endpoints/: about_me.py  auth.py  comments.py  posts.py  rating.py
homework8/tests/: conftest.py  test_about_me.py  test_auth.py  test_comments.py  test_paginate.py  test_posts.py  test_rating.py  test_schemas.py
