[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Dmitriy Zubko <vale432@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mock = "^4.0.3"
pytest-mock = "^3.7.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
